<resources>
    <string name="app_name">Find Pairs</string>
    <string name="game_logo">Game Logo №1</string>
    <string name="play">PLAY</string>
    <string name="privacy_policy_content_description">privacy policy</string>
    <string name="game_info">Keep matching up two of the same object until there are no more to be paired and you clear the board</string>
    <string name="congratulation">[congratulation!]</string>
    <string name="great_you_won">[Great! You won!]</string>
    <string name="double_reward">Double Reward</string>
</resources>