<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/money_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/circle_background"
        app:layout_constraintEnd_toStartOf="@+id/coin_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/coin_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/money_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/money_icon"
        tools:text="100" />

    <TextView
        android:id="@+id/game_logo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/game_logo_background"
        android:gravity="center"
        android:paddingHorizontal="10dp"
        android:paddingVertical="40dp"
        android:text="@string/game_logo"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingHorizontal="35dp"
        android:text="@string/play"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/game_logo" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/privacy_policy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/grey"
        android:contentDescription="@string/privacy_policy_content_description"
        android:foreground="@drawable/privacy_policy_background"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>